samples/_failures_safe/1761631234_eaf60b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_24d70e12.c: In function ‘main’:
./samples/SAFE/__tmp_24d70e12.c:155:12: error: missing terminating " character
  155 |     printf("\nMatrix
      |            ^~~~~~~~~
./samples/SAFE/__tmp_24d70e12.c:155:5: error: expected expression at end of input
  155 |     printf("\nMatrix
      |     ^~~~~~
./samples/SAFE/__tmp_24d70e12.c:155:5: error: expected declaration or statement at end of input
